# mozolm

./: .bazelrc  .travis.yml  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  grpc_util.cc  grpc_util.h  mozolm_bigram_char_model.cc  mozolm_bigram_char_model.h  mozolm_client.cc  mozolm_client.h  mozolm_client_async_impl.cc  mozolm_client_async_impl.h  mozolm_client_async_main.cc  mozolm_model.cc  mozolm_model.h  mozolm_server_async_impl.cc  mozolm_server_async_impl.h  mozolm_server_async_main.cc  mozolm_server_async_test.cc
.github/workflows/: README.md  android-ci.yml  ci.yml  close-pull-request.yml  ios-ci.yml  linux-ci.yml  macos-ci.yml  windows-ci.yml  windows-ci.yml.disabled
bazel/: BUILD.bazel  js_build_defs.bzl  utfcpp.BUILD.bazel
docs/: grpc_containers.md  grpc_security.md
extra/android/: BUILD.bazel  android_configure.bzl
extra/models/mtu/: BUILD  README.md
mozolm/: BUILD.bazel  grpc_util.cc  grpc_util.h  grpc_util.proto  lm_scores.proto  mozolm_bigram_char_model.cc  mozolm_bigram_char_model.h  mozolm_client.cc  mozolm_client.h  mozolm_client_async_impl.cc  mozolm_client_async_impl.h  mozolm_client_async_main.cc  mozolm_model.cc  mozolm_model.h  mozolm_server_async_impl.cc  mozolm_server_async_impl.h  mozolm_server_async_main.cc  mozolm_server_async_test.cc  service.proto  utf8_util.cc  utf8_util.h  utf8_util_test.cc
mozolm/data/: README.md  en_wiki_1Mline_char_bigram.matrix.txt  en_wiki_1Mline_char_bigram.rows.txt
mozolm/examples/java/com/google/mozolm/: BUILD.bazel  README.md  SimpleClientExample.java
mozolm/grpc/: BUILD.bazel  auth_end2end_test.cc  auth_test_utils.cc  auth_test_utils.h  client_async_impl.cc  client_async_impl.h  client_async_impl_test.cc  client_async_main.cc  client_config.proto  client_helper.cc  client_helper.h  client_helper_test.cc  grpc_util.cc  grpc_util.h  grpc_util.proto  mozolm_client.cc  mozolm_client.h  mozolm_client_async_impl.cc  mozolm_client_async_impl.h  mozolm_client_async_impl_test.cc  mozolm_client_async_main.cc  mozolm_server_async_impl.cc  mozolm_server_async_impl.h  mozolm_server_async_impl_test.cc  mozolm_server_async_main.cc  mozolm_server_async_test.cc  server_async_impl.cc  server_async_impl.h  server_async_impl_test.cc  server_async_main.cc  server_config.proto  server_helper.cc  server_helper.h  server_helper_test.cc  service.proto
mozolm/grpc/testdata/cred/x509/: BUILD.bazel  README.md  client1_cert.pem  client1_key.pem  client_ca_cert.pem  client_ca_key.pem  create.sh  server1_cert.pem  server1_key.pem  server_ca_cert.pem  server_ca_key.pem
mozolm/java/com/google/mozolm/examples/: BUILD.bazel  README.md  SimpleClientExample.java  VocabOnlyModelClientExample.java
mozolm/models/: BUILD.bazel  language_model.cc  language_model.h  language_model_hub.cc  language_model_hub.h  language_model_hub_test.cc  language_model_test.cc  lm_scores.proto  model_config.proto  model_factory.cc  model_factory.h  model_storage.proto  model_test_utils.cc  model_test_utils.h  ngram_char_fst_model.cc  ngram_char_fst_model.h  ngram_char_fst_model_test.cc  ngram_fst_model.cc  ngram_fst_model.h  ngram_utils.bzl  ngram_word_fst_model.cc  ngram_word_fst_model.h  ngram_word_fst_model_test.cc  ngram_word_fst_options.proto  opengrm_ngram_char_model.cc  opengrm_ngram_char_model.h  ppm_as_fst_model.cc  ppm_as_fst_model.h  ppm_as_fst_model.proto  ppm_as_fst_model_test.cc  ppm_as_fst_options.proto  simple_bigram_char_model.cc  simple_bigram_char_model.h  simple_bigram_char_model_test.cc
mozolm/models/testdata/: BUILD.bazel  README.md  en_wiki_100line_dev_sample.txt  en_wiki_1Kline_sample.katz_word3g.fst  en_wiki_1Kline_sample.txt  gutenberg_en_char_ngram.tsv  gutenberg_en_char_ngram_o2_kn.fst  gutenberg_praise_of_folly.txt
mozolm/stubs/: BUILD.bazel  integral_types.h  logging.h  status-matchers.h  status_macros.h  thread_pool.h  thread_pool_test.cc
mozolm/utils/: BUILD.bazel  file_util.cc  file_util.h  file_util_test.cc  ngram_fst_relabel.cc  ngram_fst_relabel.h  ngram_fst_relabel_main.cc  ngram_fst_relabel_test.cc  ngram_utils.bzl  test_utils.cc  test_utils.h  utf8_util.cc  utf8_util.h  utf8_util_test.cc
release/: BUILD.bazel  README.md  build_containers.sh
stubs/: integral_types.h  logging.h
