# Copyright 2020 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) workspace file for MozoLM server.

workspace(name = "com_google_mozolm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ------------------------------------
# gRPC package for Bazel:
# ------------------------------------
# See https://github.com/grpc/grpc/blob/master/src/cpp/README.md#make

grpc_version = "1.33.2"

http_archive(
    name = "com_github_grpc_grpc",
    urls = ["https://github.com/grpc/grpc/archive/v%s.tar.gz" % grpc_version],
    sha256 = "2060769f2d4b0d3535ba594b2ab614d7f68a492f786ab94b4318788d45e3278a",
    strip_prefix = "grpc-%s" % grpc_version,
)

# ------------------------------------
# gRPC dependencies:
# ------------------------------------
# Check the list of third-party dependencies accessible through gRPC here:
#
#    https://github.com/grpc/grpc/tree/master/third_party
#
# Please do not specify these dependencies separately as they are likely to
# clash with the versions provided by gRPC.

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

# Not mentioned in official docs. Mentioned here: https://github.com/grpc/grpc/issues/20511
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

# -------------------------------------------------------------------------
# utfcpp: See
#   https://github.com/nemtrif/utfcpp
# -------------------------------------------------------------------------
utfcpp_version = "3.1.2"

http_archive(
    name = "com_github_utfcpp",
    urls = ["https://github.com/nemtrif/utfcpp/archive/v%s.tar.gz" % utfcpp_version],
    sha256 = "fea3bfa39fb8bd7368077ea5e1e0db9a8951f7e6fb6d9400b00ab3d92b807c6d",
    build_file = "@//:bazel/utfcpp.BUILD.bazel",
    strip_prefix = "utfcpp-%s" % utfcpp_version,
)

# -------------------------------------------------------------------------
# OpenFst: See
#   http://www.openfst.org/twiki/pub/FST/FstDownload/README
# -------------------------------------------------------------------------
openfst_version = "1.7.10-rc1"

http_archive(
    name = "org_openfst",
    urls = ["https://github.com/agutkin/finite_state/raw/main/openfst-%s.tar.gz" % openfst_version],
    sha256 = "ca7d7a86c867ee14052a26a5476fa27dcae4570ccca85d2c0efa0e992ddd6eb4",
    strip_prefix = "openfst-%s" % openfst_version
)

# -------------------------------------------------------------------------
# OpenGrm N-Gram: See
#   http://www.openfst.org/twiki/bin/view/GRM/NGramLibrary
# -------------------------------------------------------------------------
opengrm_ngram_version = "1.3.12-rc1"

http_archive(
    name = "org_opengrm_ngram",
    urls = ["https://github.com/agutkin/finite_state/raw/main/ngram-%s.tar.gz" % opengrm_ngram_version],
    sha256 = "8034cce0556e5e2733114ee8a35163a9f1db3a193dd894f69fe49c9cc1eca0ab",
    strip_prefix = "ngram-%s" % opengrm_ngram_version,
)

# -------------------------------------------------------------------------
# Android cross-compile configuration:
#   https://github.com/tensorflow/tensorflow/tree/master/third_party/android
# -------------------------------------------------------------------------

load("//third_party/android:android_configure.bzl", "android_configure")
android_configure(name = "local_config_android")

load("@local_config_android//:android.bzl", "android_workspace")
android_workspace()

# Local Variables:
# mode: bazel-build-mode
# End:
