# Copyright 2021 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) workspace file for MozoLM server.

workspace(name = "com_google_mozolm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ------------------------------------
# gRPC package for Bazel:
# ------------------------------------
# See https://github.com/grpc/grpc/blob/master/src/cpp/README.md#make

grpc_version = "1.34.0-pre1"

http_archive(
    name = "com_github_grpc_grpc",
    urls = ["https://github.com/grpc/grpc/archive/v%s.tar.gz" % grpc_version],
    sha256 = "2f5f808a648e0c2a4ba79590fdf0feb968e9fb6dd21785fb3c94ba0c4338c956",
    strip_prefix = "grpc-%s" % grpc_version,
)

# ------------------------------------
# gRPC dependencies:
# ------------------------------------
# Check the list of third-party dependencies accessible through gRPC here:
#
#    https://github.com/grpc/grpc/tree/master/third_party
#
# Please do not specify these dependencies separately as they are likely to
# clash with the versions provided by gRPC.

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

# Not mentioned in official docs. Mentioned here: https://github.com/grpc/grpc/issues/20511
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

# -------------------------------------------------------------------------
# utfcpp: See
#   https://github.com/nemtrif/utfcpp
# -------------------------------------------------------------------------
utfcpp_version = "3.1.2"

http_archive(
    name = "com_github_utfcpp",
    urls = ["https://github.com/nemtrif/utfcpp/archive/v%s.tar.gz" % utfcpp_version],
    sha256 = "fea3bfa39fb8bd7368077ea5e1e0db9a8951f7e6fb6d9400b00ab3d92b807c6d",
    build_file = "@//:bazel/utfcpp.BUILD.bazel",
    strip_prefix = "utfcpp-%s" % utfcpp_version,
)

# -------------------------------------------------------------------------
# OpenFst: See
#   http://www.openfst.org/twiki/pub/FST/FstDownload/README
# -------------------------------------------------------------------------
openfst_version = "1.8.1-rc1"

http_archive(
    name = "org_openfst",
    urls = ["https://github.com/agutkin/finite_state/raw/main/openfst-%s.tar.gz" % openfst_version],
    sha256 = "579da5147eeca90faaa21d24efad2c024bd41a7c3012c0b8fe66469ea86efe72",
    strip_prefix = "openfst-%s" % openfst_version
)

# -------------------------------------------------------------------------
# OpenGrm N-Gram: See
#   http://www.openfst.org/twiki/bin/view/GRM/NGramLibrary
# -------------------------------------------------------------------------
opengrm_ngram_version = "1.3.13-rc1"

http_archive(
    name = "org_opengrm_ngram",
    urls = ["https://github.com/agutkin/finite_state/raw/main/ngram-%s.tar.gz" % opengrm_ngram_version],
    sha256 = "1b1971478196bdcffb0efa99cf54b460cbf48a9bc0fdd1efecaa0ec6465a2a4f",
    strip_prefix = "ngram-%s" % opengrm_ngram_version,
)

# -------------------------------------------------------------------------
# Android cross-compile configuration:
#   https://github.com/tensorflow/tensorflow/tree/master/third_party/android
# -------------------------------------------------------------------------

load("//third_party/android:android_configure.bzl", "android_configure")
android_configure(name = "local_config_android")

load("@local_config_android//:android.bzl", "android_workspace")
android_workspace()

# Local Variables:
# mode: bazel-build-mode
# End:
