# Copyright 2021 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (http://bazel.io/) workspace file for MozoLM server.

workspace(name = "com_google_mozolm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ------------------------------------
# Bazel rules:
# ------------------------------------
# See https://github.com/bazelbuild/rules_python.
#
# This entry is a bit of a kludge. It makes sure that whichever repos that
# import `rules_python` import the latest official release. Without it, it
# seems to be impossible to import `io_bazel_rules_docker` below successfully.

http_archive(
    name = "rules_python",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.2.0/rules_python-0.2.0.tar.gz",
    sha256 = "778197e26c5fbeb07ac2a2c5ae405b30f6cb7ad1f5510ea6fdac03bded96cc6f",
)

# ------------------------------------
# gRPC (C++) package for Bazel:
# ------------------------------------
# See https://github.com/grpc/grpc/blob/master/src/cpp/README.md#make

grpc_version = "1.37.1"

http_archive(
    name = "com_github_grpc_grpc",
    urls = ["https://github.com/grpc/grpc/archive/v%s.tar.gz" % grpc_version],
    sha256 = "acf247ec3a52edaee5dee28644a4e485c5e5badf46bdb24a80ca1d76cb8f1174",
    strip_prefix = "grpc-%s" % grpc_version,
)

# --------------------------------------------------------
# External Java rules and Maven (required for gRPC Java):
# --------------------------------------------------------
# See https://github.com/bazelbuild/rules_jvm_external

rules_jvm_version = "4.0"

http_archive(
    name = "rules_jvm_external",
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % rules_jvm_version,
    strip_prefix = "rules_jvm_external-%s" % rules_jvm_version,
    sha256 = "31701ad93dbfe544d597dbe62c9a1fdd76d81d8a9150c2bf1ecf928ecdf97169",
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

# ------------------------------------
# gRPC (Java) package for Bazel:
# ------------------------------------
# See https://github.com/grpc/grpc/blob/master/src/cpp/README.md#make

grpc_version = "1.37.0"

http_archive(
    name = "com_github_grpc_grpc_java",
    urls = ["https://github.com/grpc/grpc-java/archive/v%s.tar.gz" % grpc_version],
    sha256 = "4796b6e434545ecc9e827f9ba52c0604a3c84e175c54f0882121965b1ee5c367",
    strip_prefix = "grpc-java-%s" % grpc_version,
)

# ------------------------------------
# gRPC dependencies:
# ------------------------------------
# Check the list of third-party dependencies accessible through gRPC here:
#
#    https://github.com/grpc/grpc/tree/master/third_party
#
# Please do not specify these dependencies separately as they are likely to
# clash with the versions provided by gRPC.

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()

# Not mentioned in official docs. Mentioned here: https://github.com/grpc/grpc/issues/20511
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

# -------------------------------------------------------------------------
# utfcpp: See
#   https://github.com/nemtrif/utfcpp
# -------------------------------------------------------------------------
utfcpp_version = "3.2"

http_archive(
    name = "com_github_utfcpp",
    urls = ["https://github.com/nemtrif/utfcpp/archive/v%s.tar.gz" % utfcpp_version],
    sha256 = "cd4f9a66d23dc385bd7ea11bc0abfda8ea1ad1dcf5cd6d3a27bc551e86436364",
    build_file = "@//:bazel/utfcpp.BUILD.bazel",
    strip_prefix = "utfcpp-%s" % utfcpp_version,
)

# -------------------------------------------------------------------------
# OpenFst: See
#   http://www.openfst.org/twiki/pub/FST/FstDownload/README
# -------------------------------------------------------------------------
openfst_version = "1.8.2-rc1"

http_archive(
    name = "org_openfst",
    urls = ["https://github.com/agutkin/finite_state/raw/main/openfst-%s.tar.gz" % openfst_version],
    sha256 = "0e86f73a7b4ebeadcb62af65479c352db9e0241a05317942767ec2670e58a6fb",
    strip_prefix = "openfst-%s" % openfst_version,
)

# -------------------------------------------------------------------------
# OpenGrm N-Gram: See
#   http://www.openfst.org/twiki/bin/view/GRM/NGramLibrary
# -------------------------------------------------------------------------
opengrm_ngram_version = "1.3.13-rc1"

http_archive(
    name = "org_opengrm_ngram",
    urls = ["https://github.com/agutkin/finite_state/raw/main/ngram-%s.tar.gz" % opengrm_ngram_version],
    sha256 = "c027cee208090f35a1f725dc9cc22bc0d977adba346d765bf2e1f55990a4fa40",
    strip_prefix = "ngram-%s" % opengrm_ngram_version,
)

# -------------------------------------------------------------------------
# Protocol buffer matches (should be part of gmock and gtest, but not yet):
#   https://github.com/inazarenko/protobuf-matchers
# -------------------------------------------------------------------------
# TODO: Get rid of `protobuf-matchers` once the maintainer of gtest
# and gmock introduce it in their repos. See the discussion here:
#   https://github.com/google/googletest/issues/1761

http_archive(
    name = "com_github_protobuf_matchers",
    urls = ["https://github.com/inazarenko/protobuf-matchers/archive/refs/heads/master.zip"],
    strip_prefix = "protobuf-matchers-master",
)

# -------------------------------------------------------------------------
# Android cross-compile configuration:
#   https://github.com/tensorflow/tensorflow/tree/master/third_party/android
# -------------------------------------------------------------------------

load("//third_party/android:android_configure.bzl", "android_configure")
android_configure(name = "local_config_android")

load("@local_config_android//:android.bzl", "android_workspace")
android_workspace()

# ------------------------------------------------------------------------------
# Java version of gRPC: Miscellaneous required dependencies for supporting
# the `java_grpc_libray` rule. See:
#   https://github.com/grpc/grpc-java/blob/master/examples/WORKSPACE
# ------------------------------------------------------------------------------

load("@com_github_grpc_grpc_java//:repositories.bzl", "IO_GRPC_GRPC_JAVA_ARTIFACTS")
load("@com_github_grpc_grpc_java//:repositories.bzl", "IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS")

maven_install(
    artifacts = IO_GRPC_GRPC_JAVA_ARTIFACTS,
    generate_compat_repositories = True,
    override_targets = IO_GRPC_GRPC_JAVA_OVERRIDE_TARGETS,
    repositories = ["https://repo.maven.apache.org/maven2/"],
)

load("@maven//:compat.bzl", "compat_repositories")
compat_repositories()

load("@com_github_grpc_grpc_java//:repositories.bzl", "grpc_java_repositories")
grpc_java_repositories()

# ------------------------------------
# Pure JavaScript for Bazel & gRPC:
# ------------------------------------
# See:
#   https://github.com/rules-proto-grpc/rules_proto_grpc
#   https://rules-proto-grpc.aliddell.com/en/latest/lang/js.html

proto_grpc_version = "3.1.1"

http_archive(
    name = "rules_proto_grpc",
    urls = ["https://github.com/rules-proto-grpc/rules_proto_grpc/archive/refs/tags/%s.tar.gz" % (
        proto_grpc_version)],
    strip_prefix = "rules_proto_grpc-%s" % proto_grpc_version,
    sha256 = "7954abbb6898830cd10ac9714fbcacf092299fda00ed2baf781172f545120419",
)

load("@rules_proto_grpc//:repositories.bzl", "rules_proto_grpc_toolchains")

rules_proto_grpc_toolchains()

load("@rules_proto_grpc//js:repositories.bzl", rules_proto_grpc_js_repos = "js_repos")

rules_proto_grpc_js_repos()

load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")

yarn_install(
    name = "npm",
    # This should be changed to your local package.json which should contain the
    # dependencies required.
    package_json = "@rules_proto_grpc//js:requirements/package.json",
    yarn_lock = "@rules_proto_grpc//js:requirements/yarn.lock",
)

# -------------------------------------------------------------------------
# Bazel container image rules:
#   https://github.com/bazelbuild/rules_docker
# -------------------------------------------------------------------------

docker_version = "0.17.0"

http_archive(
    name = "io_bazel_rules_docker",
    sha256 = "59d5b42ac315e7eadffa944e86e90c2990110a1c8075f1cd145f487e999d22b3",
    strip_prefix = "rules_docker-%s" % docker_version,
    urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v%s/rules_docker-v%s.tar.gz" % (
        docker_version, docker_version)],
)

load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories = "repositories")

container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

container_deps()

load("@io_bazel_rules_docker//container:pull.bzl", "container_pull")

# Pull the base Linux distribution: Should be between five and six megabytes.
container_pull(
    name = "alpine_linux_amd64",
    registry = "index.docker.io",
    repository = "library/alpine",
    tag = "3.13.5",
    digest = "sha256:def822f9851ca422481ec6fee59a9966f12b351c62ccb9aca841526ffaa9f748",
)

load("@io_bazel_rules_docker//cc:image.bzl", _cc_image_repos = "repositories")

_cc_image_repos()

# Local Variables:
# mode: bazel-build
# End:
