# Copyright 2021 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Rules for packaging and releasing the containers.

load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

package(default_visibility = ["//mozolm:__subpackages__"])

licenses(["notice"])

platform(
    name = "linux-x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

container_image(
    name = "base_image",
    base = "@alpine_linux_amd64//image",
    visibility = ["//visibility:private"],
)

cc_image(
    name = "mozolm_server_async_image",
    base = ":base_image",
    binary = "//mozolm/grpc:server_async_static",
    stamp = True,
)

cc_image(
    name = "mozolm_client_async_image",
    base = ":base_image",
    binary = "//mozolm/grpc:client_async_static",
    stamp = True,
)
